<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.japan.JapanCalculatorFragment"
    android:background="@color/mainBackground">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/calculate_car_from_japan"
        android:fontFamily="@font/days_one"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView">


        <EditText
            android:id="@+id/carPriceYenET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/car_price_yen"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="number"
            android:fontFamily="@font/days_one"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <RadioButton
                android:id="@+id/lessThreeRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/days_one"
                android:text="@string/less_three_years"/>

            <RadioButton
                android:id="@+id/threeFromFiveRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_to_five_years"
                android:fontFamily="@font/days_one"
                android:textColor="@color/white"/>
            <RadioButton
                android:id="@+id/fiveFromSevenRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/days_one"
                android:text="@string/five_to_seven_years"/>
            <RadioButton
                android:id="@+id/moreSevenRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/days_one"
                android:text="@string/more_seven"/>
        </RadioGroup>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/individual"
                android:gravity="center"
                android:fontFamily="@font/days_one"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_selector_calc_face"
                android:textColor="@drawable/text_color_calc_face" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/legal_entity"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:fontFamily="@font/days_one"
                android:textColor="@drawable/text_color_calc_face"
                android:background="@drawable/radio_selector_calc_face" />

        </RadioGroup>

        <EditText
            android:id="@+id/engineCapacityED"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/capacity_engine"
            android:inputType="number"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/days_one"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:backgroundTint="#008000"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:fontFamily="@font/days_one"
            android:text="@string/calculate"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>