<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.exchangeRate.ExchangeRatesFragment"
    android:background="@color/mainBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_cb"
                android:fontFamily="@font/days_one"
                android:textSize="30sp"
                android:textColor="@color/white" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/commonTextStyleRates"
                    android:text="@string/dollar_usa"
                    android:layout_weight="1"
                    android:layout_gravity="left"/>

                <TextView
                    android:id="@+id/tvDollarRateCb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/days_one"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/euro"
                    style="@style/commonTextStyleRates"
                    android:layout_weight="1"
                    android:layout_gravity="left"/>

                <TextView
                    android:id="@+id/tvEuroRateCb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/days_one"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/japan_yen"
                    style="@style/commonTextStyleRates"
                    android:layout_weight="1"
                    android:layout_gravity="left"/>

                <TextView
                    android:id="@+id/tvYenRateCb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/days_one"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/white" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/korea_von"
                    style="@style/commonTextStyleRates"
                    android:layout_weight="1"
                    android:layout_gravity="left" />

                <TextView
                    android:id="@+id/tvVonRateCb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/days_one"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/white" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swift_transfer_atb"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/days_one"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dollar_usa"
                    style="@style/commonTextStyleRates"
                    android:layout_weight="1"
                    android:layout_gravity="left" />

                <TextView
                    android:id="@+id/tvDollarRateSwift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/days_one"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/japan_yen"
                    style="@style/commonTextStyleRates"
                    android:layout_weight="1"
                    android:layout_gravity="left"
                    />

                <TextView
                    android:id="@+id/tvYenRateSwift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/days_one"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/btnUpdateRates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:backgroundTint="@color/lightGrey"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    style="@style/commonTextStyleRates"/>

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:backgroundTint="@color/lightGrey"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    style="@style/commonTextStyleRates"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>